--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,9 @@ target_link_libraries(blink stm32f765)
 set_property(TARGET blink PROPERTY CXX_STANDARD 17)
 stm32_add_linker_script(blink PRIVATE src/basic.stm32.ld)
 stm32_add_flash_targets(blink)
+
+add_executable(timer src/timer.cpp)
+target_link_libraries(timer stm32f765)
+set_property(TARGET timer PROPERTY CXX_STANDARD 17)
+stm32_add_linker_script(timer PRIVATE src/stm32f7.ld)
+stm32_add_flash_targets(timer)
